--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next build && next export"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@mui/styles": "^5.5.1",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
